--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hej</h1>
+
+<h1>Hello World</h1>
+<p>This is my website.</p>
+
 </body>
 </html>
