--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Page</title>
+    <title>TITLE</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<header> HEADER </header>
+<nav> nav </nav>
+<main> Main </main>
+<section>Section</section>
+<footer>Footer</footer>
 
-<h1>Hello World</h1>
-<p>This is my website.</p>
+<h1>H1</h1>
+<p>P</p>
 
 </body>
 </html>
