--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
+
 <head>
     <title>TITLE</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header> HEADER </header>
+<header> HEADEeR </header>
 <nav> nav </nav>
 <main> Main </main>
 <section>Section</section>
