--- a/index.html
+++ b/index.html
@@ -6,14 +6,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header> HEADEeR </header>
-<nav> nav </nav>
-<main> Main </main>
-<section>Section</section>
-<footer>Footer</footer>
-
-<h1>H1</h1>
-<p>P</p>
-
+<main>
+    <h1>Mario Candalea</h1>
+    <hr/>
+</main>
+    <div class="banner"></div>
 </body>
 </html>
