span and background

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <main>
     <h1>Mario Candalea</h1>
     <hr/>
+    <span>
+        I’m a 22-year-old named Marian Candalea, but I go by Mario.
+        In my free time, I enjoy DJing and experimenting with sounds.
+        I also love hanging out with friends and relaxing over a good cup of coffee.
+    </span>
 </main>
     <div class="banner"></div>
 </body>
