--- a/index.html
+++ b/index.html
@@ -2,18 +2,27 @@
 <html lang = "en">
 
 <head>
-    <title>TITLE</title>
+    <title>About me</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<header>
+
+    <a href="#">Home</a>
+
+    <a href="#">About</a>
+
+    <a href="#">Info</a>
+
+</header>
+
 <main>
     <h1>Mario Candalea</h1>
     <hr/>
-    <span>
-        I’m a 22-year-old named Marian Candalea, but I go by Mario.
-        In my free time, I enjoy DJing and experimenting with sounds.
-        I also love hanging out with friends and relaxing over a good cup of coffee.
-    </span>
+    <h1>Who am I?</h1>
+    <p>
+        I'm a 23-year-old named Marian Candalea, but I go by Mario. In my free time, I enjoy DJing and experimenting with sounds. I also love hanging out with friends and relaxing over a good cup of coffee.
+    </p>
 </main>
     <div class="banner"></div>
 </body>
